sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value lgr
  while (i+ecart < lgr){
                   ^