sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var longueur = getNombreValeurs()
  var ecart = longueur
  if (ecart>1){
    ecart=(ecart.toDouble / 1.3).toInt
  }
  var i = 0
  while (i+ecart < lgr){
    if (plusPetit(i+ecart,i)){
      echange(i,i+ecart)
    }
    i=i+1
  }
}